# nix-gl-host

./: .pre-commit-config.yaml  default.nix  nixglhost_test.py  pyproject.toml  shell.nix
nixglhost/: __init__.py  cli.py  main.py  nvidia.py  util.py
src/: nixglhost.py
tests/: nixglhost_test.py
